force-app/main/default/objects/Maintenance__c/Maintenance__c.object-meta.xml
<CustomObject>
    <label>Maintenance</label>
    <nameField>
        <displayFormat>M-{00000}</displayFormat>
        <label>Maintenance Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Maintenance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>