force-app/main/default/objects/Maintenance__c/fields/Braking_Fluid_Level__c.field-meta.xml
<CustomField>
    <fullName>Braking_Fluid_Level__c</fullName>
    <label>Braking Fluid Level</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>