force-app/main/default/objects/Maintenance__c/fields/Oil_Level__c.field-meta.xml
<CustomField>
    <fullName>Oil_Level__c</fullName>
    <label>Oil Level</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>