force-app/main/default/objects/Maintenance__c/fields/Tire_Condition__c.field-meta.xml
<CustomField>
    <fullName>Tire_Condition__c</fullName>
    <label>Tire Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Fair</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>